--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
         </div>
       </div>
+    </div>
     </header>
 
     <div class="nav-scroller py-1 mb-2">
@@ -54,7 +55,7 @@
       <div class="thumb-bar">
       </div>
     </div>
-
+  </div>
 
   <footer class="blog-footer">
     <p>Watch your garden grow!</p>
