--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Week 6, Part 1</title>
+  <title>Succulent Gallery</title>
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-
 </head>
 
 <body>
@@ -32,7 +31,6 @@
         </div>
       </div>
     </header>
-  </div>
 
     <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-between">
@@ -44,18 +42,19 @@
       </nav>
     </div>
 
-    <h1>Succulent Gallery</h1>
-
-    <div class="gallery">
-      <div class="full-img">
-        <img class="displayed-img" alt="succulents" src="images/pic1.jpg">
-        <div class="overlay"></div>
-        <button class="dark">Darken</button>
-      </div>
-      <div class="thumb-bar">
+    <div class="container">
+      <h1>Succulent Gallery</h1>
+      <div class="gallery">
+        <div class="full-img">
+          <img class="displayed-img" alt="succulents" src="images/pic1.jpg">
+          <div class="overlay"></div>
+          <button class="dark">Darken</button>
+        </div>
+        <div class="thumb-bar">
+        </div>
       </div>
     </div>
-
+  </div>
   <footer class="blog-footer">
     <p>Watch your garden grow!</p>
   </footer>
