--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1>Succulent Gallery</h1>
       <div class="gallery">
         <div class="full-img">
-          <img class="full-img" alt="succulents" src="images/pic1.jpg">
+          <img class="displayed-img" alt="succulents" src="images/pic1.jpg">
           <div class="overlay"></div>
           <button class="dark">Darken</button>
         </div>
