--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Succulent Gallery</title>
+  <title>Kin Euphorics</title>
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,50 +14,133 @@
 </head>
 
 <body>
-  <div class="container">
-    <header class="blog-header py-3">
-      <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-4 pt-1">
-          <a class="text-muted" href="#">Subscribe</a>
-        </div>
-        <div class="col-4 text-center">
-          <a class="blog-header-logo text-dark" href="#">Succulents</a>
-        </div>
-        <div class="col-4 d-flex justify-content-end align-items-center">
-          <a class="text-muted" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-          </a>
-          <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
-        </div>
-      </div>
-    </header>
+  <header>
+<nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
+  <a class="navbar-brand" href="#"><img src="images/kin.png"></img></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Shop</a>
+      </li>
+    </ul>
+    <form class="form-inline mt-2 mt-md-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+</header>
 
-    <div class="nav-scroller py-1 mb-2">
-      <nav class="nav d-flex justify-content-between">
-        <a class="p-2 text-muted" href="#">Plants</a>
-        <a class="p-2 text-muted" href="#">Proper Care</a>
-        <a class="p-2 text-muted" href="#">Arrangements</a>
-        <a class="p-2 text-muted" href="#">Individual Plants</a>
-        <a class="p-2 text-muted" href="#">About Us</a>
-      </nav>
-    </div>
+<main role="main">
 
-    <div class="container">
-      <h1>Succulent Gallery</h1>
-      <div class="gallery">
-        <div class="full-img">
-          <img class="displayed-img" alt="succulents" src="images/pic1.jpg">
-          <div class="overlay"></div>
-          <button class="dark">Darken</button>
-        </div>
-        <div class="thumb-bar">
+<div id="myCarousel" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="bd-placeholder-img" src="images/kin-euphorics-1.jpg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></img>
+      <div class="container">
+        <div class="carousel-caption text-left">
         </div>
       </div>
     </div>
   </div>
-  <footer class="blog-footer">
-    <p>Watch your garden grow!</p>
-  </footer>
+</div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  The Lineup
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Kin Euphorics</h5>
+        <button type="button" class="close btn-primary" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <div class="row">
+<div class="col-sm">
+<a onclick="changeImage('images/kin-spritz-2.jpg')">Kin Spritz</a>
+</div>
+<div class="col-sm">
+<a onclick="changeImage('images/kin-euphorics-6.jpg')">High Rhode</a>
+</div>
+<div class="col-sm">
+<a onclick="changeImage('images/kin-dream-light-2.png')">Dream Light</a>
+</div>
+</div>
+<img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+  <!-- START THE FEATURETTES -->
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Kin Spritz<span>Lifted Mind. Relaxed Body. Kindred Spirit.</span></h2>
+      <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading">Kin High Rhode <span>Joyful Boost. Soothing Calm. No Hangover.</span></h2>
+      <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Kin Dream Light <span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
+      <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <!-- /END THE FEATURETTES -->
+
+</div><!-- /.container -->
+
+
+<!-- FOOTER -->
+<footer class="container">
+  <p class="float-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</footer>
+</main>
+  </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scripts.js"></script>
