--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
         <a class="nav-link" href="#">Shop</a>
       </li>
     </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 </header>
@@ -54,7 +50,6 @@
   </div>
 </div>
 <!-- Button trigger modal -->
-
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
   The Lineup
 </button>
@@ -137,8 +132,7 @@
 
 <!-- FOOTER -->
 <footer class="container">
-  <p class="float-right"><a href="#">Back to top</a></p>
-  <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  <p>Happy drinking!</p>
 </footer>
 </main>
   </body>
