--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
 <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
-  <a class="navbar-brand" href="#"><img src="images/kin.png"></img></a>
+  <a class="navbar-brand" href="#"><img src="images/kin.png" alt="kin logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,12 +36,12 @@
 </nav>
 </header>
 
-<main role="main">
+<main>
 
 <div id="myCarousel" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="bd-placeholder-img" src="images/kin-euphorics-1.jpg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></img>
+      <img class="bd-placeholder-img" src="images/kin-euphorics-1.jpg" alt="Kin Dream Light and High Rhode display"/>
       <div class="container">
         <div class="carousel-caption text-left">
         </div>
@@ -81,8 +81,6 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
 <!-- Marketing messaging and featurettes
 ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -95,7 +93,7 @@
       <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg"/>
     </div>
   </div>
 
@@ -107,7 +105,7 @@
       <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg"/>
     </div>
   </div>
 
@@ -119,7 +117,7 @@
       <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/></img>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg"/>
     </div>
   </div>
 
