--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg"/>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg"/ alt="Kin Spritz">
     </div>
   </div>
 
@@ -105,7 +105,7 @@
       <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg"/>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" alt="Kin High Rhode"/>
     </div>
   </div>
 
@@ -117,16 +117,13 @@
       <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg"/>
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" alt="Kin Dream Light"/>
     </div>
   </div>
 
   <hr class="featurette-divider">
 
   <!-- /END THE FEATURETTES -->
-
-</div><!-- /.container -->
-
 
 <!-- FOOTER -->
 <footer class="container">
