--- a/index.html
+++ b/index.html
@@ -15,125 +15,125 @@
 
 <body>
   <header>
-<nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
-  <a class="navbar-brand" href="#"><img src="images/kin.png" alt="kin logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Shop</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-</header>
-
-<main>
-
-<div id="myCarousel" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="bd-placeholder-img" src="images/kin-euphorics-1.jpg" alt="Kin Dream Light and High Rhode display"/>
-      <div class="container">
-        <div class="carousel-caption text-left">
-        </div>
+    <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
+      <a class="navbar-brand" href="#"><img src="images/kin.png" alt="kin logo"/></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Shop</a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div>
-</div>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  The Lineup
-</button>
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Kin Euphorics</h5>
-        <button type="button" class="close btn-primary" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+    </nav>
+  </header>
 
-      <div class="modal-body">
-        <div class="row">
-<div class="col-sm">
-<a onclick="changeImage('images/kin-spritz-2.jpg')">Kin Spritz</a>
-</div>
-<div class="col-sm">
-<a onclick="changeImage('images/kin-euphorics-6.jpg')">High Rhode</a>
-</div>
-<div class="col-sm">
-<a onclick="changeImage('images/kin-dream-light-2.png')">Dream Light</a>
-</div>
-</div>
-<img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet" />
+  <main>
+
+    <div id="myCarousel" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="bd-placeholder-img" src="images/kin-euphorics-1.jpg" alt="Kin Dream Light and High Rhode display"/>
+          <div class="container">
+            <div class="carousel-caption text-left">
+            </div>
           </div>
         </div>
       </div>
     </div>
-<!-- Marketing messaging and featurettes
-================================================== -->
-<!-- Wrap the rest of the page in another container to center all the content. -->
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+      The Lineup
+    </button>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Kin Euphorics</h5>
+            <button type="button" class="close btn-primary" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
-  <!-- START THE FEATURETTES -->
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Kin Spritz<span>Lifted Mind. Relaxed Body. Kindred Spirit.</span></h2>
-      <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-sm">
+                <a onclick="changeImage('images/kin-spritz-2.jpg')">Kin Spritz</a>
+              </div>
+              <div class="col-sm">
+                <a onclick="changeImage('images/kin-euphorics-6.jpg')">High Rhode</a>
+              </div>
+              <div class="col-sm">
+                <a onclick="changeImage('images/kin-dream-light-2.png')">Dream Light</a>
+              </div>
+            </div>
+            <img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet" />
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg"/ alt="Kin Spritz">
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <!-- START THE FEATURETTES -->
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Kin Spritz<span>Lifted Mind. Relaxed Body. Kindred Spirit.</span></h2>
+        <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-4.jpeg" alt="Kin Spritz"/>
+      </div>
     </div>
-  </div>
 
-  <hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-  <div class="row featurette">
-    <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading">Kin High Rhode <span>Joyful Boost. Soothing Calm. No Hangover.</span></h2>
-      <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Kin High Rhode <span>Joyful Boost. Soothing Calm. No Hangover.</span></h2>
+        <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" alt="Kin High Rhode"/>
+      </div>
     </div>
-    <div class="col-md-5 order-md-1">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" alt="Kin High Rhode"/>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Kin Dream Light <span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
+        <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" alt="Kin Dream Light"/>
+      </div>
     </div>
-  </div>
 
-  <hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Kin Dream Light <span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
-      <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
-    </div>
-    <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" alt="Kin Dream Light"/>
-    </div>
-  </div>
+    <!-- /END THE FEATURETTES -->
 
-  <hr class="featurette-divider">
-
-  <!-- /END THE FEATURETTES -->
-
-<!-- FOOTER -->
-<footer class="container">
-  <p>Happy drinking!</p>
-</footer>
-</main>
-  </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/scripts.js"></script>
+    <!-- FOOTER -->
+    <footer class="container">
+      <p>Happy drinking!</p>
+    </footer>
+  </main>
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 
 </html>
