--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-sm">
-                <a onclick="changeImage('images/kin-spritz-2.jpg')">Kin Spritz</a>
+                <a onclick="changeImage('images/kin-spritz-2.jpg')"><img src="images/kin-spritz-3.jpg" alt="Kin Spritz can"/></a>
               </div>
               <div class="col-sm">
-                <a onclick="changeImage('images/kin-euphorics-6.jpg')">High Rhode</a>
+                <a onclick="changeImage('images/kin-euphorics-6.jpg')"><img src="images/high-rhode-1.jpg" alt="Kin High Rhode bottle"/></a>
               </div>
               <div class="col-sm">
-                <a onclick="changeImage('images/kin-dream-light-2.png')">Dream Light</a>
+                <a onclick="changeImage('images/kin-dream-light-2.png')"><img src="images/dream-light-3.jpg" alt="Kin Dream Light bottle"/></a>
               </div>
             </div>
-            <img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet" />
+            <img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet"/>
           </div>
         </div>
       </div>
@@ -108,6 +108,8 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <!-- START THE FEATURETTES -->
+
+    <hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7">
@@ -152,7 +154,6 @@
       <p>Happy drinking!</p>
     </footer>
   </main>
-</body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
