--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <a onclick="changeImage('images/kin-spritz-2.jpg')"><img src="images/kin-spritz-3.jpg" alt="Kin Spritz can"/></a>
               </div>
               <div class="col-sm">
-                <a onclick="changeImage('images/kin-euphorics-6.jpg')"><img src="images/high-rhode-1.jpg" alt="Kin High Rhode bottle"/></a>
+                <a onclick="changeImage('images/kin-euphorics-6.jpg')"><img src="images/kin-high-rhode.jpg" alt="Kin High Rhode bottle"/></a>
               </div>
               <div class="col-sm">
-                <a onclick="changeImage('images/kin-dream-light-2.png')"><img src="images/dream-light-3.jpg" alt="Kin Dream Light bottle"/></a>
+                <a onclick="changeImage('images/kin-dream-light-2.png')"><img src="images/kin-dream-light.jpg" alt="Kin Dream Light bottle"/></a>
               </div>
             </div>
             <img id="kinEuphorics" src="images/kin-spritz-2.jpg" alt="Kin Spritz cans on teal velvet"/>
@@ -111,7 +111,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Kin Spritz<span>Lifted Mind. Relaxed Body. Kindred Spirit.</span></h2>
         <p class="lead"><br>Sparkling hibiscus and refreshing citrus with a ginger kick — an herbaceous spritz of refreshment. For best effects, sip socially.<br><br><br>For an elevated twist, muddle a couple slices of Thai red chili in a shaker, add ice, a can of Kin Spritz and 1oz pomegranate juice. Stir and strain into a cocktail glass. Garnish with an edible flower.</p>
@@ -123,19 +123,19 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+    <div class="featurette">
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" alt="Kin High Rhode"/>
+      </div>
+      <div class="col-md-7">
         <h2 class="featurette-heading">Kin High Rhode <span>Joyful Boost. Soothing Calm. No Hangover.</span></h2>
         <p class="lead"><br>Grounded in an herbaceous palate, Kin High Rhode has notes of earthy florals, tart citrus, and warming spice. Mix with juices, sodas, and bitters to make it your own.<br><br><br>For a soothing nightcap, pour 2oz Kin Dream Light over 4oz oat milk, or other milk of choice. Can be served warm or on ice. Garnish with a cinnamon stick.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-high-rhode-2.jpg" alt="Kin High Rhode"/>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="=featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Kin Dream Light <span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
         <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
