--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 
     <hr class="featurette-divider">
 
-    <div class="=featurette">
+    <div class="featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Kin Dream Light <span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
-        <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai. <br><br><br> For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
+        <h2 class="featurette-heading">Kin Dream Light<span>Serene Relaxation. Less Stress. Clear Mornings.</span></h2>
+        <p class="lead"><br>Like a midnight walk through the forest, Dream Light tastes as good as it feels. Rich in forest notes of oak, clove, gentian, and passionflower with the warming spice of cinnamon, chili, and ginger, some compare it to the taste of chai.<br><br><br>For a fun and refreshing social cocktail, fill a Collins glass with ice. Add 2oz Kin High Rhode, 1oz pineapple juice, then fill with ginger beer. Stir gently to combine. Garnish with a pineapple wedge.</p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="images/kin-euphorics-12.jpg" alt="Kin Dream Light"/>
